<resources>
    <string name="app_name">EventBus_demo</string>
    <string name="message_received">Message Received:</string>
    <string name="message_main_activity">Message received in MainActivity : </string>
    <string name="message_second_activity">Message received in SecondActivity : </string>
    <string name="message_fragment">Message received in Fragment : </string>
    <string name="title_main">MainActivity</string>
    <string name="title_fragment">Fragment</string>
    <string name="title_stickyEvent">StickyEvent Example</string>
    <string name="hint_message">Enter message</string>
    <string name="send_message_fragment">Send message to Fragment</string>
    <string name="get_data_from_db">Get Data From DB</string>
    <string name="next_acitivity">Go to next activity</string>
    <string name="send_message_activity">Send message to Activity</string>
    <string name="show_second_activity">Show Second Activity</string>
    <string name="request_url">http://192.168.0.21/EventBus_demo/demo.php</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
