<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_large"
    android:background="#cfcfcf"
    tools:context="com.example.shubham.eventbus_demo.secondActivity">

    <RelativeLayout
        android:id="@+id/activityLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/padding_medium"
        android:layout_marginTop="@dimen/margin_extra_large">

        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/title_main"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/message1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title1"/>

        <EditText
            android:id="@+id/activityData1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/message1"
            android:hint="@string/hint_message"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/datafromdb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="getDataFromDB"
            android:layout_below="@id/activityData1"
            android:text="@string/get_data_from_db"/>

    </RelativeLayout>

</RelativeLayout>
